working on mobile issues

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -11,7 +11,12 @@
     p {
       padding:0 15px;
     }
-  
+    img {
+      .border-radius(5px);
+      @media @phone {
+        width: 100%;
+      }
+    }
   }
 
   .space-images {
@@ -25,6 +30,25 @@
       border-radius: 20px;
       height: 100%;
     }
+  }
+  .sky {
+    @media @phone {
+      display: none;
+    }
+  }
+
+  .launch {
+    @media @phone {
+      display: none;
+    }
+  }
+  @media @phone {
+    width: 100%;
+  }
+  @media @phone {
+    flex-direction: column-reverse;
+    margin: 0 auto;
+    padding: 20px 15px;
   }
 
   .visit-planets {
@@ -58,8 +82,28 @@
       }
 
       .btn {
+        .button-creator(100px, 45px, @btn-bg-color, @wild-sand, 2rem);
+	
+	        @media @phone {
+	          display: flex;
+	          flex-direction: column;
+	          width: 100%;
+	        }
+	      }
+	
+	      @media @phone {
+	        width: 100%;
+	        margin: 0 auto;
+	        padding-top: 20px;
       }
     }
+    @media @phone {
+      width: 100%;
+      margin: 0 auto;
+    }
+    @media @phone {
+      width: 100%;
+      padding-top: 20px;
 
     .walk-img {
       width: 46%;
@@ -72,4 +116,6 @@
       }
     }
   }
-}// home
+}
+
+}
